<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <android.support.v4.view.ViewPager 
    android:id="@+id/viewPager"    
    android:layout_width="fill_parent"
    android:layout_height="180dp"/>
    <HorizontalScrollView
       
        android:id="@+id/hscroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <RadioGroup
            android:id="@+id/bar_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/bar_rd1"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:checked="true"
                android:paddingBottom="3dp"
                android:text="@string/text_tj" />

            <RadioButton
                android:id="@+id/bar_rd2"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginLeft="2dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/dm_text_ph" />

            <RadioButton
                android:id="@+id/bar_rd3"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                 android:layout_marginLeft="2dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/dm_text_rb" />
            
            <RadioButton
                android:id="@+id/bar_rd4"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                 android:layout_marginLeft="2dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/dm_text_mx" />

            <RadioButton
                android:id="@+id/bar_rd5"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                 android:layout_marginLeft="2dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                android:text="@string/dm_text_kh" />

            <RadioButton
                android:id="@+id/bar_rd6"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                 android:layout_marginLeft="2dp"
                android:text="@string/dm_text_gx" />

            <RadioButton
                android:id="@+id/bar_rd7"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                 android:layout_marginLeft="2dp"
                android:text="@string/dm_text_zz" />

            <RadioButton
                android:id="@+id/bar_rd8"
                style="@style/main_radio_botton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingBottom="3dp"
                 android:layout_marginLeft="2dp"
                android:text="@string/dm_text_rz" />
        </RadioGroup>
    </HorizontalScrollView>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@drawable/gradient_gap"
        />
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
 <include layout="@layout/listview_item"/>
<include layout="@layout/progress_bar" android:id="@+id/pb"/>
</RelativeLayout>
</LinearLayout>